@@ -223,6 +223,31 @@ public class IRODSFileImplTest {
 		irodsSession.closeSession();
 	}
 	
+	
+	@Test
+	public final void testRootExists() throws Exception {
+		String testFileName = "/";
+
+
+		// now get an irods file and see if it is readable, it should be
+
+		IRODSProtocolManager irodsConnectionManager = IRODSSimpleProtocolManager
+				.instance();
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+		IRODSSession irodsSession = IRODSSession
+				.instance(irodsConnectionManager);
+		IRODSAccessObjectFactory accessObjectFactory = IRODSAccessObjectFactoryImpl
+				.instance(irodsSession);
+		IRODSFileFactory irodsFileFactory = accessObjectFactory
+				.getIRODSFileFactory(irodsAccount);
+		IRODSFile irodsFile = irodsFileFactory
+				.instanceIRODSFile(testFileName);
+
+		Assert.assertTrue(irodsFile.exists());
+		irodsSession.closeSession();
+	}
+	
 	@Test
 	public final void testExistsNoFile() throws Exception {
 		String testFileName = "testExistsNoFile.txt";
